--- a/0x04-React_inline_styling/task_0/dashboard/src/CourseList/CourseList.css
+++ b/0x04-React_inline_styling/task_0/dashboard/src/CourseList/CourseList.css
@@ -1,22 +1,53 @@
-th {
-    border-bottom: 1px solid gray;
-    margin: 0;
-    padding: 0;
-    text-align: left;
+.course-container {
+  min-height: 26rem;
 }
 
-th:first-child {
-    text-align: center;
+.course-wrapper {
+  padding: 1rem;
 }
 
 table {
-    width: 90%;
-    border: 1px solid gray;
-    margin: auto;
-    margin-top: 40px;
-    padding: 0;
+  width: 100%;
+  border-spacing: 0;
 }
 
+thead tr:first-of-type th {
+  text-align: center;
+}
+
+th,
 td {
-    padding-left: 3px;
+  padding: 0.25rem;
+  border: 1px solid lightgray;
+}
+
+th {
+  text-align: left;
+}
+
+thead tr:last-of-type th:first-of-type,
+tbody tr td:first-of-type {
+  border-right: 0;
+  border-left-width: 1px;
+  border-bottom-width: 0px;
+  border-top-width: 0px;
+}
+
+thead tr:last-of-type th:last-of-type,
+tbody tr td:last-of-type {
+  border-bottom-width: 0px;
+  border-top-width: 0px;
+  border-left-width: 0px;
+}
+
+thead tr:last-of-type th:last-of-type {
+  border-bottom-width: 1px;
+}
+
+thead tr:last-of-type th:first-of-type {
+  border-bottom-width: 1px;
+}
+
+tbody tr:last-child td {
+  border-bottom-width: 1px;
 }
