--- a/0x04-React_inline_styling/task_1/dashboard/src/Notifications/Notifications.css
+++ b/0x04-React_inline_styling/task_1/dashboard/src/Notifications/Notifications.css
@@ -1,15 +1,27 @@
+.menuItem {
+  text-align: right;
+}
+
 .Notifications {
-	  padding: 1em;
-	    border: 2px dashed red;
-	      position: absolute;
-	        top: 10px;
-		  width: 95vw;
-	  }
+  float: right;
+  border: 3px dashed var(--primary-color);
+  padding: 10px;
+  margin-bottom: 20px;
+}
 
-	  li[data="default"] {
-		    color: blue;
-	    }
+.Notifications button img {
+  width: 10px;
+}
 
-	    li[data="urgent"] {
-		      color: red;
-	      }
+.Notifications p {
+  margin: 0;
+  margin-top: 15px;
+}
+
+[data-notification-type='default'] {
+  color: blue;
+}
+
+[data-notification-type='urgent'] {
+  color: red;
+}
